feat: L345 minor change